cola para guardado de token fcm desde zent logbook
