# swagger_server/swagger/swagger.yaml
@@ -132,8 +132,11 @@ paths:
                       example: 1
                     fcm_token:
                       type: string
-                      format: uuid
                       example: "7f9c3a1e-2b4d-4e5f-8a6b-1c2d3e4f5a6b"
+                    session_id:
+                      nullable: true
+                      type: integer
+                      example: 1
                     platform:
                       type: string
                       example: "android"
